testsuite/escript/classes/fail-scopes-const-shadowing.err
fail-scopes-const-shadowing.src:9:9: error: Cannot define a variable with the same name as constant 'constant'.